--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ plugins {
 }
 
 group = "edu.sc.seis"
-version = "2.3.1-SNAPSHOT"
+version = "2.3.1-CCB"
 
 sourceCompatibility = 11
 targetCompatibility = 11
